Fix align

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -467,3 +467,7 @@ section a {
   justify-content: center;
   gap: var(--space-1);
 }
+
+.register h1 {
+  text-align: center;
+}
